订单表初始化

--- a/PrinterySystem/Views/SystemOp/Dashborad.cshtml
+++ b/PrinterySystem/Views/SystemOp/Dashborad.cshtml
@@ -300,14 +300,14 @@
     <script src="~/Content/Dashboradasset/js/jquery-3.2.1.slim.min.js"></script>
     <script src="~/Content/Dashboradasset/js/popper.min.js"></script>
     <script src="~/Content/Dashboradasset/js/bootstrap.min.js"></script>
-    <!-- Chart.js 圖表套件 -->
+    <!-- Chart.js 图表套件 -->
     <script src="~/Content/Dashboradasset/js/Chart.bundle.min.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
             $('[data-toggle="tooltip"]').tooltip();
 
-            // 編輯的 Modal 事件
+            // 编辑的 Modal 事件
             $('#editModal').on('show.bs.modal', function (event) {
 
             });
