--- a/PrinterySystem/Views/Shared/_LayoutSysManager.cshtml
+++ b/PrinterySystem/Views/Shared/_LayoutSysManager.cshtml
@@ -9,6 +9,14 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    @*<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+            <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">印刷管理后台</a>
+            <ul class="navbar-nav px-3">
+                <li class="nav-item text-nowrap">
+                    <a class="nav-link" href="@Url.Action("Login", "Account")">Sign in</a>
+                </li>
+            </ul>
+        </nav>*@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#">印刷管理后台</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +37,10 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">个人信息</a>
+                        <a class="dropdown-item" href="#">雇员信息</a>
                         <a class="dropdown-item" href="#">客户信息</a>
+                        @*<div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>*@
                     </div>
                 </li>
                 <li class="nav-item">
@@ -38,7 +49,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("OrderManagement", "Manager")">订单管理</a>
                 </li>
+                @*<li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>*@
             </ul>
+            @*<form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>*@
             <a class="nav-link btn btn-outline-success" href="@Url.Action("Login", "Account")">Sign in</a>
         </div>
     </nav>
