--- a/PrinterySystem/Views/SystemOp/Dashborad4employee.cshtml
+++ b/PrinterySystem/Views/SystemOp/Dashborad4employee.cshtml
@@ -2,7 +2,7 @@
     Layout = "~/Views/Shared/_LayoutSys.cshtml";
 }
 @{
-    ViewBag.Title = "控制台";
+    ViewBag.Title = "控制台(雇员)";
 }
 
 <!DOCTYPE html>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="card-body">
                         <div class="text-right mb-3">
-                            <button class="btn btn-outline-secondary btn-sm">订单管理</button>
+                            <a href="@Url.Action("OrderManagement", "Manager")" class="btn btn-outline-secondary btn-sm">订单管理</a>
                         </div>
                         <table class="table">
                             <thead>
@@ -142,31 +142,13 @@
             <section class="col-lg-8">
                 <div class="card rounded-0">
                     <div class="card-header">
-                        用户来源
+                        销售状况
                     </div>
                     <div class="card-body">
                         <div class="row">
                             <div class="col-lg-12">
                                 <canvas id="barCanvas"></canvas>
                             </div>
-                            @*<div class="col-lg-4">
-                                    <h4>Detail</h4>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto amet velit minima at ex eum repellendus nobis delectus culpa voluptate eligendi veritatis distinctio, accusamus veniam voluptatem commodi harum! Esse, modi.
-                                    </p>
-                                    <h6 class="mt-3">Google 來源</h6>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="25" aria-valuemax="100"></div>
-                                    </div>
-                                    <h6 class="mt-3">Facebook 來源</h6>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="25" aria-valuemin="25" aria-valuemax="100"></div>
-                                    </div>
-                                    <h6 class="mt-3">无法追踪</h6>
-                                    <div class="progress">
-                                        <div class="progress-bar bg-info" role="progressbar" style="width: 40%" aria-valuenow="25" aria-valuemin="25" aria-valuemax="100"></div>
-                                    </div>
-                                </div>*@
                         </div>
                     </div>
                 </div>
@@ -200,7 +182,7 @@
                     </form>
                     <div class="ml-auto">
                         <a href="#" class="btn btn-outline-secondary btn-sm">下载报表</a>
-                        <a href="#" class="btn btn-outline-secondary btn-sm">订单管理</a>
+                        <a href="#" class="btn btn-outline-secondary btn-sm">表单管理</a>
                     </div>
                 </div>
                 <table class="table table-responsive-sm mb-0">
