--- a/PrinterySystem/Views/Person4Manager/CustomerInfo.cshtml
+++ b/PrinterySystem/Views/Person4Manager/CustomerInfo.cshtml
@@ -3,15 +3,230 @@
 }
 
 <!DOCTYPE html>
-
-<html>
+<html lang="zh-Hant-TW">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>客户管理</title>
+    <link rel="stylesheet" href="~/Content/Dashboradasset/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="~/Content/Dashboradasset/css/all.css">
 </head>
 <body>
-    <div>
 
+    <div class="container-fluid mt-3 main">
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+            <div class="col-md-8 text-right my-2 my-lg-0">
+                <button class="btn btn-primary" data-toggle="modal" data-target="#editModal" data-title="快速下單">
+                    <fa class="fa fa-shopping-cart"></fa>
+                    快速下單
+                </button>
+            </div>
+        </div>
+
+        <table class="table table-responsive-md table-hover">
+            <thead>
+                <tr>
+                    <th width="10">#</th>
+                    <th>品項</th>
+                    <th width="120">Name</th>
+                    <th width="200">Email</th>
+                    <th width="120">狀態</th>
+                    <th class="text-right" width="120">金額</th>
+                    <th class="text-center" width="150">操作</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td><a href="#">超纖細肥皂 1盒</a></td>
+                    <td>
+                        Mark
+                        <span class="badge badge-pill badge-danger">奧客</span>
+                    </td>
+                    <td>Mark@mail.com</td>
+                    <td>已出貨</td>
+                    <td class="text-right">NT$ 899</td>
+                    <td class="text-center">
+                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
+                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
+                            <button type="button" class="btn btn-outline-secondary">查看</button>
+                            <div class="btn-group" role="group">
+                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    ...
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Other action</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr class="table-danger">
+                    <td>2</td>
+                    <td><a href="#">(保證)無泡泡沐浴乳 5罐</a></td>
+                    <td>
+                        Jacob
+                        <span class="badge badge-pill badge-success">常客</span>
+                    </td>
+                    <td>Jacob@mail.com</td>
+                    <td><span class="text-danger">缺貨</span></td>
+                    <td class="text-right">NT$ 3,600</td>
+                    <td class="text-center">
+                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
+                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 (保證)無泡泡沐浴乳 5罐" data-backdrop="static">編輯</button>
+                            <button type="button" class="btn btn-outline-secondary">查看</button>
+                            <div class="btn-group" role="group">
+                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    ...
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Other action</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="(保證)無泡泡沐浴乳 5罐">刪除</a>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td><a href="#">防滑燈罩 100個</a></td>
+                    <td>Larry</td>
+                    <td>Larry@mail.com</td>
+                    <td>已出貨</td>
+                    <td class="text-right">NT$ 14,060</td>
+                    <td class="text-center">
+                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
+                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 防滑燈罩 100個" data-backdrop="static">編輯</button>
+                            <button type="button" class="btn btn-outline-secondary">查看</button>
+                            <div class="btn-group" role="group">
+                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    ...
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Other action</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="防滑燈罩 100個">刪除</a>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row" colspan="7">
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th scope="row" colspan="7">...</th>
+                </tr>
+                <tr>
+                    <th scope="row" colspan="7">...</th>
+                </tr>
+                <tr>
+                    <th scope="row" colspan="7">...</th>
+                </tr>
+                <tr>
+                    <th scope="row" colspan="7">...</th>
+                </tr>
+                <tr>
+                    <th scope="row" colspan="7">...</th>
+                </tr>
+            </tbody>
+        </table>
+
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </nav>
     </div>
+
+    <footer class="mt-5 py-3 bg-light text-secondary text-center">
+        XX印刷厂管理系统
+    </footer>
+
+    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="removeModal" tabindex="-1" role="dialog" aria-labelledby="removeModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-danger text-white">
+                    <h5 class="modal-title" id="removeModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="text-white">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-outline-danger">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="~/Content/Dashboradasset/js/jquery-3.2.1.slim.min.js"></script>
+    <script src="~/Content/Dashboradasset/js/popper.min.js"></script>
+    <script src="~/Content/Dashboradasset/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+
+            $('#editModal').on('show.bs.modal', function (event) {
+                var btn = $(event.relatedTarget);
+                var title = btn.data('title');
+
+                var modal = $(this);
+                modal.find('.modal-title').text(title);
+            });
+
+            $('#removeModal').on('show.bs.modal', function (event) {
+                var btn = $(event.relatedTarget);
+                var title = btn.data('title');
+
+                var modal = $(this);
+                modal.find('.modal-title').text('確認刪除 ' + title);
+            });
+        });
+    </script>
 </body>
 </html>
