--- a/PrinterySystem/Views/Manager/StockManagement.cshtml
+++ b/PrinterySystem/Views/Manager/StockManagement.cshtml
@@ -49,7 +49,7 @@
                         <li>Priority email support</li>
                         <li>Help center access</li>
                     </ul>
-                    <a class="btn btn-lg btn-block btn-outline-primary" href="@Url.Action("ProduceStockManagement","Manager")">进入</a>
+                    <a class="btn btn-lg btn-block btn-outline-primary" href="@Url.Action("ProductStockManagement","Manager")">进入</a>
                 </div>
             </div>
             <div class="card mb-4 shadow-sm">
