--- a/PrinterySystem/Views/Manager/PaperStockManagement.cshtml
+++ b/PrinterySystem/Views/Manager/PaperStockManagement.cshtml
@@ -40,14 +40,10 @@
         <table class="table table-responsive-md table-hover">
             <thead>
                 <tr>
-                    <th width="10">#</th>
-                    <th>品项</th>
-                    <th width="120">客户姓名</th>
-                    <th width="200">电子邮箱</th>
-                    <th width="120">状态</th>
-                    <th class="text-center" width="120">单价</th>
-                    <th class="text-center" width="120">数量</th>
-                    <th class="text-center" width="120">金额</th>
+                    <th>纸品编号</th>
+                    <th>纸品名称</th>
+                    <th>库存数</th>
+                    <th>状态</th>
                     <th class="text-center" width="150">操作</th>
                 </tr>
             </thead>
@@ -55,19 +51,8 @@
                 <tr>
                     <td>1</td>
                     <td><a href="#">《西游记第x版》</a></td>
-                    <td>
-                        Mark
-                        <span class="badge badge-pill badge-danger">奧客</span>
-                    </td>
-                    <td>Mark@mail.com</td>
                     <td>已出货</td>
-                    <td class="text-center">NT$ 899</td>
-                    <td class="text-center">
-                        <div class="input-group">
-                            <input type='number' class='form-control input-sm' min='1' id='c"+i+"' value='1' />
-                        </div>
-                    </td>
-                    <td class="text-center">NT$ 899</td>
+                    <td>已出货</td>
                     <td class="text-center">
                         <div class="btn-group btn-group-sm" role="group" aria-label="action">
                             <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
@@ -85,244 +70,6 @@
                             </div>
                         </div>
                     </td>
-                </tr>
-                <tr class="table-danger">
-                    <td>2</td>
-                    <td><a href="#">(保證)無泡泡沐浴乳 5罐</a></td>
-                    <td>
-                        Jacob
-                        <span class="badge badge-pill badge-success">常客</span>
-                    </td>
-                    <td>Jacob@mail.com</td>
-                    <td><span class="text-danger">缺貨</span></td>
-                    <td class="text-center">NT$ 3,600</td>
-                    <td class="text-center">
-                        <div class="input-group">
-                            <input type='number' class='form-control input-sm' min='1' id='c"+i+"' value='1' />
-                        </div>
-                    </td>
-                    <td class="text-center">NT$ 3,600</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 (保證)無泡泡沐浴乳 5罐" data-backdrop="static">編輯</button>
-                            <button type="button" class="btn btn-outline-secondary">查看</button>
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    ...
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Other action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="(保證)無泡泡沐浴乳 5罐">刪除</a>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td><a href="#">防滑燈罩 100個</a></td>
-                    <td>Larry</td>
-                    <td>Larry@mail.com</td>
-                    <td>已出货</td>
-                    <td class="text-center">NT$ 899</td>
-                    <td class="text-center">
-                        <div class="input-group">
-                            <input type='number' class='form-control input-sm' min='1' id='c"+i+"' value='1' />
-                        </div>
-                    </td>
-                    <td class="text-center">NT$ 14,060</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 防滑燈罩 100個" data-backdrop="static">編輯</button>
-                            <button type="button" class="btn btn-outline-secondary">查看</button>
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    ...
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Other action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="防滑燈罩 100個">刪除</a>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td><a href="#">《西游记第x版》</a></td>
-                    <td>
-                        Mark
-                        <span class="badge badge-pill badge-danger">奧客</span>
-                    </td>
-                    <td>Mark@mail.com</td>
-                    <td>已出货</td>
-                    <td class="text-center">NT$ 899</td>
-                    <td class="text-center">
-                        <div class="input-group">
-                            <input type='number' class='form-control input-sm' min='1' id='c"+i+"' value='1' />
-                        </div>
-                    </td>
-                    <td class="text-center">NT$ 899</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
-                            <button type="button" class="btn btn-outline-secondary">查看</button>
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    ...
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Other action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td><a href="#">《西游记第x版》</a></td>
-                    <td>
-                        Mark
-                        <span class="badge badge-pill badge-danger">奧客</span>
-                    </td>
-                    <td>Mark@mail.com</td>
-                    <td>已出货</td>
-                    <td class="text-center">NT$ 899</td>
-                    <td class="text-center">
-                        <div class="input-group">
-                            <input type='number' class='form-control input-sm' min='1' id='c"+i+"' value='1' />
-                        </div>
-                    </td>
-                    <td class="text-center">NT$ 899</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
-                            <button type="button" class="btn btn-outline-secondary">查看</button>
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    ...
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Other action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td><a href="#">《西游记第x版》</a></td>
-                    <td>
-                        Mark
-                        <span class="badge badge-pill badge-danger">奧客</span>
-                    </td>
-                    <td>Mark@mail.com</td>
-                    <td>已出货</td>
-                    <td class="text-center">NT$ 899</td>
-                    <td class="text-center">
-                        <div class="input-group">
-                            <input type='number' class='form-control input-sm' min='1' id='c"+i+"' value='1' />
-                        </div>
-                    </td>
-                    <td class="text-center">NT$ 899</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
-                            <button type="button" class="btn btn-outline-secondary">查看</button>
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    ...
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Other action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td><a href="#">《西游记第x版》</a></td>
-                    <td>
-                        Mark
-                        <span class="badge badge-pill badge-danger">奧客</span>
-                    </td>
-                    <td>Mark@mail.com</td>
-                    <td>已出货</td>
-                    <td class="text-center">NT$ 899</td>
-                    <td class="text-center">
-                        <div class="input-group">
-                            <input type='number' class='form-control input-sm' min='1' id='c"+i+"' value='1' />
-                        </div>
-                    </td>
-                    <td class="text-center">NT$ 899</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
-                            <button type="button" class="btn btn-outline-secondary">查看</button>
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    ...
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Other action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td><a href="#">《西游记第x版》</a></td>
-                    <td>
-                        Mark
-                        <span class="badge badge-pill badge-danger">奧客</span>
-                    </td>
-                    <td>Mark@mail.com</td>
-                    <td>已出货</td>
-                    <td class="text-center">NT$ 899</td>
-                    <td class="text-center">
-                        <div class="input-group">
-                            <input type='number' class='form-control input-sm' min='1' id='c"+i+"' value='1' />
-                        </div>
-                    </td>
-                    <td class="text-center">NT$ 899</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
-                            <button type="button" class="btn btn-outline-secondary">查看</button>
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    ...
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Other action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row" colspan="7">...</th>
                 </tr>
             </tbody>
         </table>
