--- a/PrinterySystem/Views/Manager/StockManagement.cshtml
+++ b/PrinterySystem/Views/Manager/StockManagement.cshtml
@@ -17,7 +17,7 @@
 
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">库存管理</h1>
-        <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+        <p class="lead">便捷入口，点击进入管理页面</p>
     </div>
 
     <div class="container">
@@ -27,27 +27,27 @@
                     <h4 class="my-0 font-weight-normal">纸品管理</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+                    <h1 class="card-title pricing-card-title">管理库存纸品</h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>10 users included</li>
-                        <li>2 GB of storage</li>
-                        <li>Email support</li>
-                        <li>Help center access</li>
+                        <li>方便</li>
+                        <li>快捷</li>
+                        <li>高效</li>
+                        <li>智能化</li>
                     </ul>
                     <a class="btn btn-lg btn-block btn-outline-primary" href="@Url.Action("PaperStockManagement","Manager")">进入</a>
                 </div>
             </div>
             <div class="card mb-4 shadow-sm">
                 <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">样品管理</h4>
+                    <h4 class="my-0 font-weight-normal">产品管理</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
+                    <h1 class="card-title pricing-card-title">管理产品库存</h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>20 users included</li>
-                        <li>10 GB of storage</li>
-                        <li>Priority email support</li>
-                        <li>Help center access</li>
+                        <li>方便</li>
+                        <li>快捷</li>
+                        <li>高效</li>
+                        <li>智能化</li>
                     </ul>
                     <a class="btn btn-lg btn-block btn-outline-primary" href="@Url.Action("ProductStockManagement","Manager")">进入</a>
                 </div>
@@ -57,12 +57,12 @@
                     <h4 class="my-0 font-weight-normal">油墨管理</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
+                    <h1 class="card-title pricing-card-title">管理油墨库存</h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>30 users included</li>
-                        <li>15 GB of storage</li>
-                        <li>Phone and email support</li>
-                        <li>Help center access</li>
+                        <li>方便</li>
+                        <li>快捷</li>
+                        <li>高效</li>
+                        <li>智能化</li>
                     </ul>
                     <a class="btn btn-lg btn-block btn-outline-primary" href="@Url.Action("PrintingInkStockManagement","Manager")">进入</a>
                 </div>
