--- a/PrinterySystem/Views/Manager/PurchasingManagement.cshtml
+++ b/PrinterySystem/Views/Manager/PurchasingManagement.cshtml
@@ -7,12 +7,209 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="~/Content/Dashboradasset/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="~/Content/Dashboradasset/css/all.css">
 </head>
 <body>
-    <div>
-        采购处理
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">采购单处理</h1>
+        <p class="lead">点击按钮可切换</p>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <div class="list-group list-group-horizontal-lg" id="list-tab" role="tablist">
+                <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">纸张采购</a>
+                <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">油墨采购</a>
+            </div>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+                    <table class="table table-responsive-md table-hover">
+                        <thead>
+                            <tr>
+                                <th>采购单号</th>
+                                <th>纸张编号</th>
+                                <th>纸张名称</th>
+                                <th>入库数量</th>
+                                <th>总价格</th>
+                                <th>创建人</th>
+                                <th>处理人</th>
+                                <th>当前状态</th>
+                                <th>创建日期</th>
+                                <th>处理日期</th>
+                                <th>操作</th>
+                            </tr>
+                        </thead>
+                        @{
+                            var paperList = ViewBag.PaperPurchase as List<Printery.Domain.ViewModel.PurchasingPaperViewModel>;
+                            if (paperList != null)
+                            {
+                                <tbody>
+                                    @{
+                                        foreach (var item in paperList)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.PurchasingID)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.PaperId)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.PaperName)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.Count)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.Price)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.CreatePersonId)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.ProcessPersonId)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.Status)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.CreateDate)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.ProcessDate)
+                                                </td>
+                                                <td class="text-center">
+                                                    <div class="btn-group btn-group-sm" role="group" aria-label="action">
+                                                        <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
+                                                        <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="订单编号：12321421321" data-backdrop="static">查看</button>
+                                                        <div class="btn-group" role="group">
+                                                            <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                                ...
+                                                            </button>
+                                                            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                                                <a class="dropdown-item" href="#">Action</a>
+                                                                <a class="dropdown-item" href="#">Other action</a>
+                                                                <div class="dropdown-divider"></div>
+                                                                <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            }
+                        }
+
+                    </table>
+                    @{
+
+                        if (paperList != null && paperList.Count > 0)
+                        {
+                            @Html.Partial("Pager1")
+
+                        }
+                    }
+                </div>
+                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+                    <table class="table table-responsive-md table-hover">
+                        <thead>
+                            <tr>
+                                <th>采购单号</th>
+                                <th>油墨编号</th>
+                                <th>油墨名称</th>
+                                <th>入库数量</th>
+                                <th>总价格</th>
+                                <th>创建人</th>
+                                <th>处理人</th>
+                                <th>当前状态</th>
+                                <th>创建日期</th>
+                                <th>处理日期</th>
+                            </tr>
+                        </thead>
+                        @{
+                            var inkList = ViewBag.InkPurchase as List<Printery.Domain.ViewModel.PurchasingInkViewModel>;
+                            if (inkList != null)
+                            {
+                                <tbody>
+                                    @{
+                                        foreach (var item in inkList)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.PurchasingID)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.InkId)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.InkName)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.Count)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.Price)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.CreatePersonId)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.ProcessPersonId)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.Status)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.CreateDate)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelitem => item.ProcessDate)
+                                                </td>
+                                                <td class="text-center">
+                                                    <div class="btn-group btn-group-sm" role="group" aria-label="action">
+                                                        <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
+                                                        <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="订单编号：12321421321" data-backdrop="static">查看</button>
+                                                        <div class="btn-group" role="group">
+                                                            <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                                ...
+                                                            </button>
+                                                            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                                                <a class="dropdown-item" href="#">Action</a>
+                                                                <a class="dropdown-item" href="#">Other action</a>
+                                                                <div class="dropdown-divider"></div>
+                                                                <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            }
+                        }
+                    </table>
+                    @{
+
+                        if (inkList != null && inkList.Count > 0)
+                        {
+                            @Html.Partial("Pager")
+
+                        }
+                    }
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
