--- a/PrinterySystem/Views/Manager/WorkflowManagement.cshtml
+++ b/PrinterySystem/Views/Manager/WorkflowManagement.cshtml
@@ -17,7 +17,7 @@
 
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">工单管理系统</h1>
-        <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+        <p class="lead">点击按键进入相应管理页面</p>
     </div>
 
     <div class="container">
@@ -27,12 +27,12 @@
                     <h4 class="my-0 font-weight-normal">订单处理</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+                    <h1 class="card-title pricing-card-title">管理已创建的订单</h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>10 users included</li>
-                        <li>2 GB of storage</li>
-                        <li>Email support</li>
-                        <li>Help center access</li>
+                        <li>已创建：31312</li>
+                        <li>已处理:123121</li>
+                        <li>待处理：1321</li>
+                        <li>订单复核</li>
                     </ul>
                     <a class="btn btn-lg btn-block btn-outline-primary" href="@Url.Action("OrderProcessing","Manager")">进入</a>
                 </div>
@@ -42,12 +42,12 @@
                     <h4 class="my-0 font-weight-normal">采购处理</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
+                    <h1 class="card-title pricing-card-title">管理采购提交订单</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>20 users included</li>
-                        <li>10 GB of storage</li>
-                        <li>Priority email support</li>
-                        <li>Help center access</li>
+                        <li>已创建：31312</li>
+                        <li>已处理:123121</li>
+                        <li>待处理：1321</li>
+                        <li>订单复核</li>
                     </ul>
                     <a class="btn btn-lg btn-block btn-outline-primary" href="@Url.Action("PurchasingManagement","Manager")">进入</a>
                 </div>
@@ -57,12 +57,12 @@
                     <h4 class="my-0 font-weight-normal">生产处理</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
+                    <h1 class="card-title pricing-card-title">管理生产需求工单</h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>30 users included</li>
-                        <li>15 GB of storage</li>
-                        <li>Phone and email support</li>
-                        <li>Help center access</li>
+                        <li>已创建：31312</li>
+                        <li>已处理:123121</li>
+                        <li>待处理：1321</li>
+                        <li>订单复核</li>
                     </ul>
                     <a class="btn btn-lg btn-block btn-outline-primary" href="@Url.Action("ProduceManagement","Manager")">进入</a>
                 </div>
