--- a/PrinterySystem/Views/SystemOp/Dashborad4Manager.cshtml
+++ b/PrinterySystem/Views/SystemOp/Dashborad4Manager.cshtml
@@ -87,13 +87,13 @@
                         <table class="table">
                             <thead>
                             <th scope="col">
-                                来源
+                                订单号
                             </th>
                             <th scope="col">
                                 姓名
                             </th>
                             <th scope="col">
-                                商品
+                                产品
                             </th>
                             <th scope="col" width="100">
                                 价格
@@ -101,28 +101,28 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Youtube</th>
-                                    <td>喜多郎</td>
-                                    <td>六角和牛排</td>
+                                    <td>1231321</th>
+                                    <td>ABC</td>
+                                    <td>鸿运礼盒</td>
                                     <td class="text-right">3,000</td>
                                 </tr>
                                 <tr>
-                                    <td>Youtube</th>
-                                    <td>喜多郎</td>
-                                    <td>六角喜餅</td>
-                                    <td class="text-right">2,000</td>
+                                    <td>1231321</th>
+                                    <td>ABC</td>
+                                    <td>鸿运礼盒</td>
+                                    <td class="text-right">3,000</td>
                                 </tr>
                                 <tr>
-                                    <td>Youtube</th>
-                                    <td>喜多郎</td>
-                                    <td>六角雞胸</td>
-                                    <td class="text-right">1,500</td>
+                                    <td>1231321</th>
+                                    <td>ABC</td>
+                                    <td>鸿运礼盒</td>
+                                    <td class="text-right">3,000</td>
                                 </tr>
                                 <tr>
-                                    <td>Youtube</th>
-                                    <td>喜多郎</td>
-                                    <td>六角可愛 T Shirt</td>
-                                    <td class="text-right">2,000</td>
+                                    <td>1231321</th>
+                                    <td>ABC</td>
+                                    <td>鸿运礼盒</td>
+                                    <td class="text-right">3,000</td>
                                 </tr>
                             <tfoot>
                                 <tr>
@@ -156,7 +156,7 @@
             <section class="col-lg-4">
                 <div class="card h-100">
                     <div class="card-header">
-                        浏览器
+                        产品占比
                     </div>
                     <div class="card-body d-flex align-items-center">
                         <canvas class="chart-item"></canvas>
@@ -192,7 +192,7 @@
                             <th>订单数</th>
                             <th>退费数</th>
                             <th>出货数</th>
-                            <th>有问题物品</th>
+                            <th>退货订单</th>
                             <th width="150">营业额</th>
                             <th width="150">净利润</th>
                         </tr>
