--- a/PrinterySystem/Views/Account/Login.cshtml
+++ b/PrinterySystem/Views/Account/Login.cshtml
@@ -23,13 +23,13 @@
     </style>
 </head>
 <body class="text-center">
-    <form class="form-signin">
+    <form class="form-signin" method="post">
         <img class="mb-4" src="~/Content/imges/icon/logo.jpg" alt="" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+        <input value="@ViewBag.LoginUser" id="userId" type="text" name="login" class="form-control" placeholder="用户名" required="" autofocus="">
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+        <input value="@ViewBag.LoginPwd" type="password" id="password" name="password" class="form-control" placeholder="密码" required="">
         <div class="checkbox mb-3">
             <label>
                 <input type="checkbox" value="remember-me"> Remember me
