--- a/PrinterySystem/Views/Manager/OrderManagement.cshtml
+++ b/PrinterySystem/Views/Manager/OrderManagement.cshtml
@@ -31,7 +31,7 @@
                 </form>
             </div>
             <div class="col-md-4 text-right my-2 my-lg-0">
-                <button class="btn btn-primary" data-toggle="modal" data-target="#editModal" data-title="新订单创建">
+                <button class="btn btn-primary" data-toggle="modal" data-target="#addModal" data-title="新订单创建">
                     <fa class="fa fa-shopping-cart"></fa>
                     创建新订单
                 </button>
@@ -92,19 +92,9 @@
                                     </td>
                                     <td class="text-center">
                                         <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
-                                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="订单编号：12321421321" data-backdrop="static">查看</button>
-                                            <div class="btn-group" role="group">
-                                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                    ...
-                                                </button>
-                                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                                    <a class="dropdown-item" href="#">Action</a>
-                                                    <a class="dropdown-item" href="#">Other action</a>
-                                                    <div class="dropdown-divider"></div>
-                                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
-                                                </div>
-                                            </div>
+                                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="订单编号：12321421321" data-backdrop="static">編輯</button>
+                                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#ViewModal" data-title="订单编号：12321421321" data-backdrop="static">查看</button>
+                                            <button type="button" class="btn btn-outline-secondary">删除</button>
                                         </div>
                                     </td>
                                 </tr>
@@ -122,28 +112,151 @@
 
             }
         }
-       
+
     </div>
 
     <footer class="mt-5 py-3 bg-light text-secondary text-center">
         XX印刷厂管理系统
     </footer>
 
-    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="addModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="editModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="addModalLabel">Modal title</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <label>客户姓名</label>
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label>名称</label>
+                            <input type="text" class="form-control" id="CustomerName" placeholder="输入客户名称" value="" required="">
+                            <div class="invalid-feedback">
+                                Valid first name is required.
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="lastName">联系人</label>
+                            <input type="text" class="form-control" id="Contact" placeholder="输入联系人姓名" value="" required="">
+                            <div class="invalid-feedback">
+                                Valid last name is required.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label>产品</label>
+                            <select class="custom-select d-block w-100" id="Product" required="">
+                                <option value="">选择产品</option>
+                                @{
+                                    var ProductList = ViewBag.ProductList as List<Printery.Domain.ViewModel.ProductsViewModel>;
+                                    if (ProductList != null && ProductList.Count > 0)
+                                    {
+                                        foreach (var item in ProductList)
+                                        {
+                                            <option value="@item.ProductName">
+                                                @item.ProductName
+                                            </option>
+                                        }
+                                    }
+                                }
+                            </select>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label>数量</label>
+                            <input type="number" name="CCount" id="CCount" class='form-control input-sm' min='1' value='1' />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label>单价</label>
+                            <select class="custom-select d-block w-100" id="eachPrice" required="required">
+                            </select>
+                            <div class="invalid-feedback">
+                                选择单价
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label>备注</label>
+                            <input type="text" class="form-control" id="tips" placeholder="输入备注（可选）" value="" required="">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label>送货地址</label>
+                            <input type="text" class="form-control" id="address" placeholder="输入地址" value="" required="">
+                            <div class="invalid-feedback">
+                                Valid first name is required.
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label>联系电话</label>
+                            <input type="text" class="form-control" id="phone" placeholder="输入电话" value="" required="">
+                            <div class="invalid-feedback">
+                                Valid last name is required.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label>希望到货日期</label>
+                            <input type="text" class="form-control" id="deadline" placeholder="输入日期" value="" required="">
+                            <div class="invalid-feedback">
+                                Valid first name is required.
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label>电子邮箱</label>
+                            <input type="text" class="form-control" id="emailc" placeholder="输入电子邮箱" value="" required="">
+                            <div class="invalid-feedback">
+                                Valid last name is required.
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-primary" onclick="addOrder()">提交</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="removeModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-success text-white">
+                    <h5 class="modal-title" id="removeModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="text-white">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-outline-danger">保存</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="ViewModal" tabindex="-1" role="dialog" aria-labelledby="ViewModalModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-dark text-white">
+                    <h5 class="modal-title" id="removeModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="text-white">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">关闭</button>
                 </div>
             </div>
         </div>
@@ -183,6 +296,20 @@
                 var modal = $(this);
                 modal.find('.modal-title').text(title);
             });
+            $('#addModal').on('show.bs.modal', function (event) {
+                var btn = $(event.relatedTarget);
+                var title = btn.data('title');
+
+                var modal = $(this);
+                modal.find('.modal-title').text(title);
+            });
+            $('#ViewModal').on('show.bs.modal', function (event) {
+                var btn = $(event.relatedTarget);
+                var title = btn.data('title');
+
+                var modal = $(this);
+                modal.find('.modal-title').text(title);
+            });
 
             $('#removeModal').on('show.bs.modal', function (event) {
                 var btn = $(event.relatedTarget);
@@ -192,6 +319,81 @@
                 modal.find('.modal-title').text('确认删除 ' + title);
             });
         });
+        function addOrder() {
+            debugger;
+            eachPrice = document.getElementById('eachPrice').value
+            count = document.getElementById('CCount').value
+            var price = eachPrice * count
+            var tips = document.getElementById('tips').value
+            var cretepersonid = document.getElementById('personid').innerText;
+            var customername = document.getElementById('CustomerName').value
+            var contact = document.getElementById('Contact').value
+            var address = document.getElementById('address').value
+            var phone = document.getElementById('phone').value
+            var deadline = document.getElementById('deadline').value
+            var email = document.getElementById('emailc').value
+            var result = {
+                "OrderId": "",
+                "OrderCreate": "",
+                "OrderProcess": "",
+                "Price": price,
+                "Deadline": deadline,
+                "tips": tips,
+                "CreatePersonId": cretepersonid,
+                "ProcessPersonId": "",
+                "Status": "",
+                "CustomerId": "",
+                "CustomerName": customername,
+                "Addressed": address,
+                "Phone": phone,
+                "Email": email,
+                "Contact": contact,
+                "ProductName":$('#Product').val()
+            }
+            $('#addModal').modal('hide')
+            $(".modal-backdrop.fade").hide()
+        $.ajax({
+            type: "POST",
+            url: "../Manager/AddOrder",
+            contentType: "application/json;charset=UTF-8",
+            dataType: "json",
+            contentType: "application/json",
+            data: JSON.stringify(result),
+
+            success: function (e) {
+                debugger;
+                if (e != null)
+                    alert("添加成功！")
+                    location.reload()  
+            }
+
+        })
+        }
+         $(document).ready(function () {
+        $("#Product").change(function () {
+            var ddlprice = $("#eachPrice");
+            //debugger;
+
+            $.ajax({
+                type: "POST",
+                url: "../Manager/GetPriceList",
+                data: JSON.stringify({
+                    pri: $('#Product').val()
+                }),
+                dataType: "json",
+                contentType: "application/json",
+                success: function (result) {
+                    //debugger;
+                    var html = "<option value=''>--选择单价--</option>";
+                    ddlprice.html("");
+                    $.each(result, function (i, data) {
+                        html += "<option value=" + data.eachPrice + ">" + data.eachPrice + "</option>";
+                    });
+                    ddlprice.append(html);
+                }
+            });
+        })
+    })
     </script>
 </body>
 </html>
