--- a/PrinterySystem/Views/Manager/ProductStockManagement.cshtml
+++ b/PrinterySystem/Views/Manager/ProductStockManagement.cshtml
@@ -122,11 +122,16 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <label>客户姓名</label>
+                    <label>产品名称</label>
+                    <select id="PInkName" data-toggle="select" class="form-control select select-default" name="PInkName">
+                        <option value="default" selected="selected">--请选择要生产的产品--</option>
+                    </select>
+                    <label>生产数量</label>
+                    <input type="number" name="PCcount" id="PCcount" class='form-control input-sm' min='1' value='1' />
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-outline-danger">提交</button>
                 </div>
             </div>
         </div>
@@ -166,11 +171,16 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <label>产品名称</label>
+                    <select id="PInkName" data-toggle="select" class="form-control select select-default" name="PInkName">
+                        <option value="default" selected="selected">--请选择要生产的产品--</option>
+                    </select>
+                    <label>生产数量</label>
+                    <input type="number" name="PCcount" id="PCcount" class='form-control input-sm' min='1' value='1' />
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-outline-danger">Save changes</button>
+                    <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-outline-danger">提交</button>
                 </div>
             </div>
         </div>
