--- a/PrinterySystem/Views/Person4Manager/CustomerInfo.cshtml
+++ b/PrinterySystem/Views/Person4Manager/CustomerInfo.cshtml
@@ -33,26 +33,25 @@
         <table class="table table-responsive-md table-hover">
             <thead>
                 <tr>
-                    <th width="10">#</th>
-                    <th>品項</th>
-                    <th width="120">Name</th>
-                    <th width="200">Email</th>
-                    <th width="120">狀態</th>
-                    <th class="text-right" width="120">金額</th>
-                    <th class="text-center" width="150">操作</th>
+                    <th>客户编号</th>
+                    <th>名称</th>
+                    <th>联系人</th>
+                    <th>电话</th>
+                    <th>联系电话</th>
+                    <th>地址</th>
+                    <th class="text-center">操作</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>1</td>
-                    <td><a href="#">超纖細肥皂 1盒</a></td>
+                    <td>12asa1211</td>
+                    <td>XX有限公司</td>
                     <td>
-                        Mark
-                        <span class="badge badge-pill badge-danger">奧客</span>
+                        陈先生
                     </td>
-                    <td>Mark@mail.com</td>
-                    <td>已出貨</td>
-                    <td class="text-right">NT$ 899</td>
+                    <td>212-1231421</td>
+                    <td>13078965432</td>
+                    <td>XX省XX市XX街道XX号</td>
                     <td class="text-center">
                         <div class="btn-group btn-group-sm" role="group" aria-label="action">
                             <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
@@ -71,19 +70,18 @@
                         </div>
                     </td>
                 </tr>
-                <tr class="table-danger">
-                    <td>2</td>
-                    <td><a href="#">(保證)無泡泡沐浴乳 5罐</a></td>
+                <tr>
+                    <td>12asa1211</td>
+                    <td>XX有限公司</td>
                     <td>
-                        Jacob
-                        <span class="badge badge-pill badge-success">常客</span>
+                        陈先生
                     </td>
-                    <td>Jacob@mail.com</td>
-                    <td><span class="text-danger">缺貨</span></td>
-                    <td class="text-right">NT$ 3,600</td>
+                    <td>212-1231421</td>
+                    <td>13078965432</td>
+                    <td>XX省XX市XX街道XX号</td>
                     <td class="text-center">
                         <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 (保證)無泡泡沐浴乳 5罐" data-backdrop="static">編輯</button>
+                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
                             <button type="button" class="btn btn-outline-secondary">查看</button>
                             <div class="btn-group" role="group">
                                 <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -93,22 +91,24 @@
                                     <a class="dropdown-item" href="#">Action</a>
                                     <a class="dropdown-item" href="#">Other action</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="(保證)無泡泡沐浴乳 5罐">刪除</a>
+                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
                                 </div>
                             </div>
                         </div>
                     </td>
                 </tr>
                 <tr>
-                    <td>3</td>
-                    <td><a href="#">防滑燈罩 100個</a></td>
-                    <td>Larry</td>
-                    <td>Larry@mail.com</td>
-                    <td>已出貨</td>
-                    <td class="text-right">NT$ 14,060</td>
+                    <td>12asa1211</td>
+                    <td>XX有限公司</td>
+                    <td>
+                        陈先生
+                    </td>
+                    <td>212-1231421</td>
+                    <td>13078965432</td>
+                    <td>XX省XX市XX街道XX号</td>
                     <td class="text-center">
                         <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 防滑燈罩 100個" data-backdrop="static">編輯</button>
+                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
                             <button type="button" class="btn btn-outline-secondary">查看</button>
                             <div class="btn-group" role="group">
                                 <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -118,33 +118,65 @@
                                     <a class="dropdown-item" href="#">Action</a>
                                     <a class="dropdown-item" href="#">Other action</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="防滑燈罩 100個">刪除</a>
+                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
                                 </div>
                             </div>
                         </div>
                     </td>
                 </tr>
                 <tr>
-                    <th scope="row" colspan="7">
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    <td>12asa1211</td>
+                    <td>XX有限公司</td>
+                    <td>
+                        陈先生
+                    </td>
+                    <td>212-1231421</td>
+                    <td>13078965432</td>
+                    <td>XX省XX市XX街道XX号</td>
+                    <td class="text-center">
+                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
+                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
+                            <button type="button" class="btn btn-outline-secondary">查看</button>
+                            <div class="btn-group" role="group">
+                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    ...
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Other action</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
+                                </div>
+                            </div>
                         </div>
-                    </th>
+                    </td>
                 </tr>
                 <tr>
-                    <th scope="row" colspan="7">...</th>
-                </tr>
-                <tr>
-                    <th scope="row" colspan="7">...</th>
-                </tr>
-                <tr>
-                    <th scope="row" colspan="7">...</th>
-                </tr>
-                <tr>
-                    <th scope="row" colspan="7">...</th>
-                </tr>
-                <tr>
-                    <th scope="row" colspan="7">...</th>
+                    <td>12asa1211</td>
+                    <td>XX有限公司</td>
+                    <td>
+                        陈先生
+                    </td>
+                    <td>212-1231421</td>
+                    <td>13078965432</td>
+                    <td>XX省XX市XX街道XX号</td>
+                    <td class="text-center">
+                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
+                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
+                            <button type="button" class="btn btn-outline-secondary">查看</button>
+                            <div class="btn-group" role="group">
+                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    ...
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Other action</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
                 </tr>
             </tbody>
         </table>
